Fixed horizontal scrolling issue
Fixed responsive issue, and continuing to work on use of columns and video carousel (if not possible, carousel will just feature other animation illustrations, and videos will be displayed individually).

--- a/styles.css
+++ b/styles.css
@@ -68,23 +68,31 @@ header.head {
 .context1 {
   background-color: white;
 	text-align: justify;
-	padding: 20px;
-	padding-left:110px;
 	font-size: 1.5em;
-  display: inline-block;
   font-family: 'Times New Roman', Times, serif;
-  word-wrap: break-word;
 }
 
-.row {
-  display: flex;
+.context2 {
+  background-color: white;
+	text-align: justify;
+  align-items: center;
 }
 
 .column {
-  flex: 50%;
-  display: inline-block;
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
 }
 
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .column {
     width: 100%;
@@ -173,6 +181,6 @@ a:hover {
   margin-right: auto;
 }
 
-* {
-  box-sizing: border-box;
+body {
+  overflow-x: hidden;
 }
